// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Weavess X Axis renders 1`] = `
<div>
  <div
    class="x-axis"
    data-cy="x-axis"
    data-end-time="400"
    data-start-time="100"
    style="height: 35px;"
  >
    <div
      style="width: 100%;"
    >
      <svg
        height="35"
        style="fill: #F6F7F9;"
        width="100%"
      >
        <g
          class="x-axis-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
        >
          <path
            class="domain"
            d="M20.5,7V0.5H-9.5V7"
            stroke="currentColor"
          />
        </g>
      </svg>
    </div>
    <div
      style="text-align: center;"
    >
      x axis
    </div>
  </div>
</div>
`;

exports[`Weavess X Axis renders without border 1`] = `
<div>
  <div
    class="x-axis no-border"
    data-cy="x-axis"
    data-end-time="400"
    data-start-time="100"
    style="height: 35px;"
  >
    <div
      style="width: 100%;"
    >
      <svg
        height="35"
        style="fill: #F6F7F9;"
        width="100%"
      >
        <g
          class="x-axis-axis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
        >
          <path
            class="domain"
            d="M20.5,7V0.5H-9.5V7"
            stroke="currentColor"
          />
        </g>
      </svg>
    </div>
    <div
      style="text-align: center;"
    >
      x axis
    </div>
  </div>
</div>
`;
